2001-12-24  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-FLET, c-FUNCTION-MACRO-LET, traverse-anode):
	use NEW-CONST

2001-12-21  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-DIRECT-FUNCTION-CALL): added a flet
	COMMUTE-WITH-REST-P (a minor simplification)

2001-12-20  Sam Steingold  <sds@gnu.org>

	optimize away COMPLEMENT in :TEST (COMPLEMENT ...)
	* compiler.lisp (c-TEST/TEST-NOT): new function
	(c-form-table): map the functions with :TEST/:TEST-NOT keys
	listed in <http://www.lisp.org/HyperSpec/Body/sec_1-8-2.html>
	to c-TEST/TEST-NOT

2001-12-20  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-seqop): do not need to check whether the user
	rebound NOT (this optimization does not depend on it)

2001-12-20  Sam Steingold  <sds@gnu.org>

	* makemake.in (unixconf.h): a separate target
	(makemake): recreate only makemake, not the whole configuration

2001-12-20  Sam Steingold  <sds@gnu.org>

	* type.lisp (canonicalize-type): canonicalize EXTENDED-CHAR
	to (OR), not to NIL

2001-12-20  Sam Steingold  <sds@gnu.org>

	* compiler.lisp: Minor code tweaks and simplifications:
	(analyze-lambdalist): new MACROLET macro PUSH-OPT
	(closuredummy-add-stack-slot): new function
	(c-LAMBDABODY, c-LET/LET*, c-MULTIPLE-VALUE-BIND, c-FLET)
	(c-LABELS, c-FUNCTION-MACRO-LET, c-GENERIC-FLET, c-GENERIC-LABELS)
	(c-FUNCALL-INLINE): use it
	(lambda-form-p): new function
	(c-form, inline-callable-function-lambda-p, c-FUNCTION): use it
	(shift-vars): new function
	(c-MAP-on-CARs, c-MAP-on-LISTs, c-MAPC, c-MAPL): use it
	(c-FLET, c-LABELS, c-FUNCTION-MACRO-LET, c-GENERIC-FLET)
	(c-GENERIC-LABELS): new macro GET-ANODE in their common macrolet
	(inlinable-function-operation-form-p): new function
	(c-FUNCTION-CALL, c-APPLY, c-seqop): use it

2001-12-20  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (version) [CROSS]: updated (19071996 --> 20010726)

2001-12-20  Arseny Slobodjuck <ampy@ich.dvo.ru>

	* lispbibl.d (OS_error): use asciz_out_s(), not asciz_out_1(),
	to output a string
